Fixed corrections in Klepikova data and UI improvements
Fixed corrections in Klepikova data and UI improvements

Bug fixes:
• Fixed incorrect SVGs appearing for certain data points in the Klepikova data
• Fixed bug where if adjustment of screen height stops just before overflow, user cannot see the "Manage Account" button

UI Adjustments:
• eFP Overview UI has been fixed
• PCC and RPKM now displays value only upto 2 decimal places
• Removed whitespace around the RNA-Seq table
• When screen is below 576 pixels in width, navbar no longer has an overflow option
• Overall adjusted UI for when screen is below 576 pixels

TODO:
• EA2016 auto-completion library implementation
• TMM or TPM additional normalization
• Expand creation of private database to include adding from public and private database to your creation
• “Tour UI”
• Back-to-top button

Known bugs:
• After generating new data, scrolling up doesn’t work unless user scrolls down first
• Does not work on IE
• Controls are not in either of the Excel exporters
• When selecting more than two datasets to add form existing data to generate new data, it does not add to the generated new data modal
• GFF ID parse output not working on redesigned UI

--- a/cgi-bin/core/style.css
+++ b/cgi-bin/core/style.css
@@ -129,7 +129,6 @@ a {
 }
 
 .efp_modal_table {
-  padding-left: 24px;
   padding-right: 10px;
   font-size: 1.4em;
 }
@@ -416,7 +415,13 @@ Credits and loves goes out to the Bootstrap team: https://github.com/orgs/twbs/p
 
 .navbar_menu {
   background-color: #4a4a4a;
-  height: 100vh;
+  height: inherit;
+}
+
+@media (min-width: 576px) {
+  .navbar_menu {
+    height: 100vh;
+  }
 }
 
 .navbar_menu_title {
